fixed issue with footer on small screens

--- a/port.css
+++ b/port.css
@@ -252,7 +252,7 @@
         justify-content: center;
     }
     .footer {
-        position: absolute;
+        position: relative;
         bottom: 0;
     }
 }
